--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
   padding: 0;
   font-family: "Outfit", sans-serif;
   font-family: 'Pacifico', cursive;
-  background-color: #000000d9.85;
+  background: rgba(0, 0, 0, 0.85);
 }
 /* .slick-slide img{
     padding: 0 10px;
