--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ body {
   font-family: "Outfit", sans-serif;
   font-family: 'Pacifico', cursive;
   background: rgba(0, 0, 0, 0.85);
+  position: relative;
 }
 /* .slick-slide img{
     padding: 0 10px;
@@ -20,4 +21,24 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+}
+
+.loadingWrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.5); /* Background color with transparency for the blur effect */
+  z-index: 9999; /* Higher z-index to ensure it appears on top of other elements */
+  backdrop-filter: blur(15px);
+  text-align: center;
+}
+
+.spinner-border {
+  width: 3rem;
+  height: 3rem;
 }
